Closed
Bug 361015
Opened 18 years ago
Closed 18 years ago
Crash [@ nsSVGGFrame::GetCanvasTM] with gradient and removing transform attribute
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: longsonr)
References
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(2 files)
629 bytes,
image/svg+xml
|
Details | |
954 bytes,
patch
|
tor
:
review+
tor
:
superreview+
|
Details | Diff | Splinter Review |
This testcase causes:
###!!! ASSERTION: null TM: 'parentTM', file /Users/admin/trunk/mozilla/layout/svg/base/src/nsSVGGFrame.cpp, line 126
###!!! ASSERTION: You can't dereference a NULL nsCOMPtr with operator->().: 'mRawPtr != 0', file ../../../../dist/include/xpcom/nsCOMPtr.h, line 849
Crash [@ nsSVGGFrame::GetCanvasTM]
Reporter | ||
Comment 1•18 years ago
|
||
Assignee | ||
Comment 2•18 years ago
|
||
Assignee: general → longsonr
Status: NEW → ASSIGNED
Attachment #245855 -
Flags: superreview?(tor)
Attachment #245855 -
Flags: review?(tor)
Attachment #245855 -
Flags: superreview?(tor)
Attachment #245855 -
Flags: superreview+
Attachment #245855 -
Flags: review?(tor)
Attachment #245855 -
Flags: review+
Assignee | ||
Comment 3•18 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsSVGGFrame::GetCanvasTM]
You need to log in
before you can comment on or make changes to this bug.
Description
•