Bug 361015 - Crash [@ nsSVGGFrame::GetCanvasTM] with gradient and removing transform attribute